--- a/src/app/recipe/recipe.component.css
+++ b/src/app/recipe/recipe.component.css
@@ -1,3 +1,15 @@
+/* styles.css */
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&display=swap');
+/* Stil för hela sidan */
+/* Stil för hela sidan */
+body {
+    background-color: #fffaea; /* Bakgrundsfärg för hela sidan */
+    margin: 0;
+    padding: 0;
+    min-height: 100%; /* Se till att body täcker hela skärmen */
+    display: flex;
+    flex-direction: column;
+}
 
 
 /* Stil för hela recept-container */
@@ -7,7 +19,6 @@
     justify-content: center;
     gap: 15px;
     padding: 15px;
-    background-color: #FFFAEA;
     max-width: 360px;
     margin: auto;
 }
